--- a/package.json
+++ b/package.json
@@ -8,9 +8,13 @@
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.1"
   },
+  "devDependencies": {
+    "tailwindcss": "^0.7.3"
+  },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "tailwind:css": "tailwind build src/tailwind.src.css -c tailwind.js -o src/tailwind.css",
+    "start": "npm run tailwind:css && react-scripts start",
+    "build": "npm run tailwind:css && react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
