--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react-gtm-module": "^2.0.7",
     "react-helmet": "^5.2.0",
     "react-router-dom": "^5.0.1",
-    "react-scripts": "2.1.1"
+    "react-scripts": "2.1.1",
+    "framer-motion": "^4.1.17"
   },
   "devDependencies": {
     "tailwindcss": "^0.7.3"
