--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@fortawesome/free-brands-svg-icons": "^5.6.3",
     "@fortawesome/free-solid-svg-icons": "^5.6.3",
     "@fortawesome/react-fontawesome": "^0.1.3",
+    "framer-motion": "^4.1.17",
     "i": "^0.3.6",
     "npm": "^6.10.1",
     "react": "^16.8.6",
@@ -15,8 +16,7 @@
     "react-gtm-module": "^2.0.7",
     "react-helmet": "^5.2.0",
     "react-router-dom": "^5.0.1",
-    "react-scripts": "2.1.1",
-    "framer-motion": "^4.1.17"
+    "react-scripts": "2.1.1"
   },
   "devDependencies": {
     "tailwindcss": "^0.7.3"
