--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@fortawesome/free-brands-svg-icons": "^5.15.4",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/react-fontawesome": "^0.1.16",
+    "framer-motion": "^4.1.17",
     "i": "^0.3.7",
     "npm": "^6.14.15",
     "react": "^16.14.0",
