--- a/package.json
+++ b/package.json
@@ -9,14 +9,15 @@
     "@fortawesome/react-fontawesome": "^0.1.16",
     "framer-motion": "^4.1.17",
     "i": "^0.3.7",
-    "npm": "^6.14.15",
-    "react": "^16.14.0",
+    "npm": "^8.3.0",
+    "postcss": "^8.4.5",
+    "react": "^17.0.2",
     "react-dom": "^16.14.0",
     "react-ga": "^2.7.0",
     "react-gtm-module": "^2.0.11",
     "react-helmet": "^5.2.1",
     "react-router-dom": "^5.3.0",
-    "react-scripts": "2.1.1"
+    "react-scripts": "^5.0.0"
   },
   "devDependencies": {
     "tailwindcss": "^0.7.4"
