add chartjs for new stats and add new character super trunks and new moves for goku namek

--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
     "@fortawesome/free-brands-svg-icons": "^5.15.4",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/react-fontawesome": "^0.1.16",
+    "chart.js": "^4.4.3",
     "framer-motion": "^4.1.17",
     "i": "^0.3.7",
     "npm": "^8.3.0",
     "postcss": "^8.4.5",
     "react": "^17.0.2",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^16.14.0",
     "react-ga": "^2.7.0",
     "react-gtm-module": "^2.0.11",
