--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "chart.js": "^4.4.3",
     "framer-motion": "^4.1.17",
+    "html2canvas": "^1.4.1",
     "i": "^0.3.7",
     "npm": "^8.3.0",
     "postcss": "^8.4.5",
